# ga

./: .context-staleness.json  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .graphqlconfig  .mailmap  .mcp.json  .output.txt  .runsettings  AGENTS.md  ARCHITECTURE_DECISIONS.md  AUGMENT_MCP_CONFIG.md  Advanced_Mathematics_for_Guitar_Alchemist__2025-11-01T06-00-33.md  AllProjects.sln  AllProjects.sln.DotSettings  AllProjects.sln.backup-20251102-123513  AllProjects.slnx  App.config  BACKLOG.md  BLENDER_MCP_SMOKE_TEST.md  BSP_DOOM_EXPLORER_IMPLEMENTATION.md  BSP_IMPLEMENTATION_COMPLETE.md  BSP_INTEGRATION_SUCCESS.md  BSP_MONGODB_PERSISTENCE_COMPLETE.md  BSP_TESTING_COMPLETE.md  CHATBOT_ENHANCEMENTS_SUMMARY.md  CHATBOT_ENHANCEMENT_ANALYSIS.md  CHATBOT_FINAL_ASSESSMENT.md  CLAUDE.md  CONTEXT.md  CONTEXTUAL_CHORDS_IMPLEMENTATION.md  COPY_PASTE_CONFIG.txt  ChatGPT-Free Blender models for BSP.md  ChatGPT-Grothendieck monoid guitar project.md  ChatGPT-LLMs for music generation.md  ChatGPT-Threejs BSP loader.md  ChordGenerationDebug.cs  (+147 more)
.claude/: settings.json
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
.fleet/: settings.json
.ga/: settings.json
.githooks/: pre-commit  pre-commit.ps1
.github/: CODEOWNERS
Apps/demerzel-agent/: .env.example  .gitignore  README.md  pyproject.toml
Apps/demerzel-agent/src/: server.py
Apps/demerzel-agent/src/agents/: epistemic_agent.py  governance_agent.py  pipeline_agent.py  whats_next_agent.py
Apps/demerzel-agent/src/services/: github.py  governance.py  ollama.py
(+6418 files in other folders)
